--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "P9-front-end-dashboard",
+  "name": "p9-front-end-dashboard",
   "version": "1.0.0",
   "description": "Backend for the 9th project of the new path Front-end Developper",
   "main": "index/app.js",
@@ -12,7 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "idx": "^2.5.6"
+    "idx": "^2.5.6",
+    "react-router-dom": "^6.3.0",
+    "sass": "^1.50.0"
   },
   "scripts": {
     "dev": "node_modules/.bin/nodemon app/index.js",
